--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Services and other stuff for accionet company",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha --recursive test/ --exit"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.8.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nyc": "^13.3.0"
   }
 }
