--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemaster",
   "version": "0.0.10",
-  "description": "Services and other stuff for accionet company",
+  "description": "Common Utils needed for development",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
