--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,3 +18,7 @@ jobs:
 
     steps:
       - checkout
+      - run:
+        name: update-npm
+        command: 'sudo npm install -g npm@latest'
+      # Download and cache dependencies
