--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,3 +34,12 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      # run tests!
+      - run:
+        name: test
+        command: 'npm test'
+
+      - store_artifacts: # special step to save test results as as artifact
+        # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
+        path: test-results.xml
+        prefix: tests
