--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,7 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run:
-          name: install-npm-wee
-          command: 'npm install'
+      - run: 'npm install -d'
       - save_cache:
           paths:
             - node_modules
