--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,14 +18,13 @@ jobs:
 
     steps:
       - checkout
-      - run: 'sudo npm install -g npm@latest'
+      - run: 'yarn global add npm@latest'
       # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: 'npm install strip-ansi --save'
       - run: 'npm install -d'
       - save_cache:
           paths:
