--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - checkout
-      - run: 'yarn global add npm@latest'
+      - run: 'sudo yarn global add npm@latest'
       # Download and cache dependencies
       - restore_cache:
           keys:
