--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,12 @@ jobs:
       - run:
           name: test
           command: 'npm test'
+      - run:
+          name: test-coverage
+          command: 'npm run coverage'
+      - run:
+          name: linter
+          command: 'npm run linter'
 
       - store_artifacts: # special step to save test results as as artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
