--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:latest
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -19,6 +19,9 @@ jobs:
     steps:
       - checkout
       - run: 'sudo yarn global add npm@latest'
+      - run:
+          name: node-version
+          command: 'node -v'
       # Download and cache dependencies
       - restore_cache:
           keys:
