--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ script:
   - npm run test
   - npm run coverage
   - npm run linter
+after_success:
+  - npm run coveralls
 deploy:
   - provider: script
     skip_cleanup: true
