--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "nyc mocha --recursive test/ --exit",
     "coverage": "nyc check-coverage --statements 55 --branches 55 --functions 30 --lines 55  ",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "linter": "eslint -c .eslintrc.js ."
   },
   "repository": {
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/afontainec/codemaster#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^3.0.5",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.18.2",
