--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint-plugin-react": "^7.12.4",
     "mocha": "^5.2.0",
     "nyc": "^14.1.1"
+  },
+  "dependencies": {
+    "requestify": "^0.2.5"
   }
 }
