--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ deploy:
   - provider: npm
     email: antonio.fontainecorrea@gmail.com
     api_key: $NPM_TOKEN
+    edge: true
     on:
       branch: master
