--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/afontainec/codemaster#readme",
   "devDependencies": {
-    "chai": "^3.5.0",
+    "chai": "^4.2.0",
     "coveralls": "^3.0.5",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -31,6 +31,7 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
+    "moment-timezone": "^0.5.28",
     "requestify": "^0.2.5"
   }
 }
